@@ -36,6 +36,11 @@ B<git-deborig> will try several common tag names.  If this fails, or
 if more than one of those common tags are present, you can specify the
 tag or branch head to archive on the command line (I<COMMITTISH> above).
 
+B<git-deborig> will override gitattributes(5) that would cause the
+contents of the tarball generated by git-archive(1) not to be
+identical with the commitish archived: the B<export-subst> and
+B<export-ignore> attributes.
+
 B<git-deborig> should be invoked from the root of the git repository,
 which should contain I<debian/changelog>.
 
@@ -54,8 +59,8 @@ how it would be invoked.  Ignores I<--force>.
 
 Note that running the git-archive(1) invocation outputted with this
 option may not produce the same output.  This is because
-B<git-deborig> takes care to disable all git attributes otherwise
-heeded by git-archive(1).
+B<git-deborig> takes care to disables git attributes otherwise heeded
+by git-archive(1), as detailed above.
 
 =item B<--version=>I<VERSION>
 
