@@ -79,6 +79,7 @@ devscripts (2.18.2) UNRELEASED; urgency=medium
     + New --version option.
     + New --force alias for -f.
     + Correct terminology ref->committish (see gitglossary(7)).
+    + Add to the manpage details about gitattributes(5) manipulation.
 
  -- Pierre-Elliott Bécue <becue@crans.org>  Sat, 17 Mar 2018 20:21:44 +0100
 
